--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -10,7 +10,7 @@ $light-dividers: rgba(white, 0.12);
 $light-focused: rgba(white, 0.12);
 
 
-$primary-color:#222858;
+$primary-color:#004d40;
 $secondary-color:#0072D0;
 $third-color:#288cd6;
 $accepted-color:#2bd057;
