--- a/src/app/authentication/components/signup/signup.component.html
+++ b/src/app/authentication/components/signup/signup.component.html
@@ -1,1 +1,136 @@
-<form action=""></form>
+<form [formGroup]="signupform">
+  <div
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="30px"
+    class="mt-100"
+  >
+    <div class="header-1">Welcome to Paikari</div>
+    <div class="header-2">Account Information</div>
+    <mat-progress-bar
+      *ngIf="isLoading"
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      mode="indeterminate"
+      color="primary"
+      class="m-0 "
+    ></mat-progress-bar>
+    <mat-card class="p-80" [class.mat-elevation-z10]="true">
+      <div
+        fxLayout="column"
+        fxLayoutAlign="center center"
+        fxLayoutGap="20px" class="p-50px"
+      >
+        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>First Name</mat-label>
+              <input type="text"
+              matInput
+              placeholder="Type in name "
+              formControlName="firstname" />
+              <mat-icon matSuffix>first name</mat-icon>
+              <mat-error
+                      *ngIf="
+                        signupform.get('firstname').touched &&
+                        signupform.get('firstname').invalid
+                      "
+                    >
+                      {{ errormessages.name }}</mat-error
+                    >
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Last Name</mat-label>
+              <input type="text"
+              matInput
+              placeholder="Type in name "
+              formControlName="lastname"  />
+              <mat-icon matSuffix>last name</mat-icon>
+              <mat-error
+                      *ngIf="
+                        signupform.get('lastname').touched &&
+                        signupform.get('lastname').invalid
+                      "
+                    >
+                      {{ errormessages.name }}</mat-error
+                    >
+            </mat-form-field>
+          </div>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Email</mat-label>
+              <input type="email"
+              matInput
+              placeholder="Type in Email"
+              formControlName="email" />
+              <mat-icon matSuffix>email</mat-icon>
+              <mat-error
+                      *ngIf="
+                        signupform.get('email').touched &&
+                        signupform.get('email').invalid
+                      "
+                    >
+                      {{ errormessages.invalid_email }}</mat-error
+                    >
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Password</mat-label>
+              <input type="password"
+              matInput
+              placeholder="Type in passoword "
+              formControlName="password" />
+              <mat-icon matSuffix>lock</mat-icon>
+              <mat-error
+                      *ngIf="
+                      signupform.get('password').touched &&
+                      signupform.get('password').invalid &&
+                      !signupform.hasError('notMatching')
+                      "
+                    >
+                      {{ errormessages.weak_password }}</mat-error
+                    >
+            </mat-form-field>
+          </div>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Phone</mat-label>
+              <input type="text"
+              matInput
+              placeholder="Type in phonenumber "
+              formControlName="phone"/>
+              <mat-icon matSuffix>phone</mat-icon>
+            </mat-form-field>
+          </div>
+          <div>
+              <mat-form-field appearance="outline">
+                  <mat-label>User Type</mat-label>
+                  <mat-select
+                    formControlName="role"
+                    disableOptionCentering
+                  >
+                    <mat-option
+                      *ngFor="let role of roles | keyvalue"
+                      [value]="role.key"
+                      >{{ role.value }}</mat-option
+                    >
+                  </mat-select>
+                  
+                </mat-form-field>
+          </div>
+        </div>
+        <div>
+            <div><button type="submit" (click)="onSubmit()" mat-raised-button color="primary" class="w-180 mt-30" >Sign Up</button></div>
+        </div>
+        <div> <a href="home">Already Have a Account?</a></div>
+      </div>
+    </mat-card>
+  </div>
+</form>
