--- a/src/app/authentication/components/signin/signin.component.html
+++ b/src/app/authentication/components/signin/signin.component.html
@@ -11,22 +11,40 @@
         <div>
           <mat-form-field appearance="outline">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="email" />
-            <mat-icon matSuffix>email</mat-icon>
+            <input
+              type="email"
+              matInput
+              placeholder="Type in Email"
+              formControlName="email"
+            />
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="password" />
-            <mat-icon matSuffix>lock</mat-icon>
+            <input
+              type="password"
+              matInput
+              placeholder="Type in passoword "
+              formControlName="password"
+            />
           </mat-form-field>
         </div>
-        <div><button mat-raised-button color="primary" class="w-180">Login</button></div>
+        <div>
+          <button
+            type="submit"
+            (click)="onSubmit()"
+            mat-raised-button
+            color="primary"
+            class="w-180"
+          >
+            Login
+          </button>
+        </div>
       </div>
     </mat-card>
     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="4px">
-      <div> <a href="url">Create Account</a></div>
+      <div><a href="authentication/sign-up">Create Account</a></div>
       <div><a href="url">Forgot Password</a></div>
     </div>
   </div>
