--- a/src/app/authentication/components/signup/signup.component.html
+++ b/src/app/authentication/components/signup/signup.component.html
@@ -7,6 +7,7 @@
   >
     <div class="header-1">Welcome to Paikari</div>
     <div class="header-2">Account Information</div>
+    <div>
     <mat-progress-bar
       *ngIf="isLoading"
       fxLayout="row"
@@ -21,92 +22,106 @@
         fxLayoutAlign="center center"
         fxLayoutGap="20px" class="p-50px"
       >
-        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
+        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
           <div>
             <mat-form-field appearance="outline">
               <mat-label>First Name</mat-label>
-              <input type="text"
-              matInput
-              placeholder="Type in name "
-              formControlName="firstname" />
-              <mat-icon matSuffix>first name</mat-icon>
-              <mat-error
-                      *ngIf="
-                        signupform.get('firstname').touched &&
-                        signupform.get('firstname').invalid
-                      "
-                    >
-                      {{ errormessages.name }}</mat-error
-                    >
+              <input
+                type="text"
+                matInput
+                placeholder="Type in name "
+                formControlName="firstname"
+              />
+              <!-- <mat-error
+                *ngIf="
+                  signupform.get('firstname').touched &&
+                  signupform.get('firstname').invalid
+                "
+              >
+                {{ errormessages.firstname }}</mat-error
+              > -->
             </mat-form-field>
           </div>
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Last Name</mat-label>
-              <input type="text"
-              matInput
-              placeholder="Type in name "
-              formControlName="lastname"  />
-              <mat-icon matSuffix>last name</mat-icon>
-              <mat-error
-                      *ngIf="
-                        signupform.get('lastname').touched &&
-                        signupform.get('lastname').invalid
-                      "
-                    >
-                      {{ errormessages.name }}</mat-error
-                    >
-            </mat-form-field>
-          </div>
-        </div>
-        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
-          <div>
-            <mat-form-field appearance="outline">
-              <mat-label>Email</mat-label>
-              <input type="email"
-              matInput
-              placeholder="Type in Email"
-              formControlName="email" />
-              <mat-icon matSuffix>email</mat-icon>
-              <mat-error
-                      *ngIf="
-                        signupform.get('email').touched &&
-                        signupform.get('email').invalid
-                      "
-                    >
-                      {{ errormessages.invalid_email }}</mat-error
-                    >
-            </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field appearance="outline">
-              <mat-label>Password</mat-label>
-              <input type="password"
-              matInput
-              placeholder="Type in passoword "
-              formControlName="password" />
-              <mat-icon matSuffix>lock</mat-icon>
-              <mat-error
-                      *ngIf="
-                      signupform.get('password').touched &&
-                      signupform.get('password').invalid &&
-                      !signupform.hasError('notMatching')
-                      "
-                    >
-                      {{ errormessages.weak_password }}</mat-error
-                    >
+              <input
+                type="text"
+                matInput
+                placeholder="Type in name "
+                formControlName="lastname"
+              />
+              <!-- <mat-error
+                *ngIf="
+                  signupform.get('lastname').touched &&
+                  signupform.get('lastname').invalid
+                "
+              >
+                {{ errormessages.lastname }}</mat-error
+              > -->
             </mat-form-field>
           </div>
         </div>
         <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
           <div>
             <mat-form-field appearance="outline">
-              <mat-label>Phone</mat-label>
-              <input type="text"
-              matInput
-              placeholder="Type in phonenumber "
-              formControlName="phone"/>
-              <mat-icon matSuffix>phone</mat-icon>
+              <mat-label>Email</mat-label>
+              <input
+                type="email"
+                matInput
+                placeholder="Type in Email"
+                formControlName="email"
+              />
+              <!-- <mat-error
+                *ngIf="
+                  signupform.get('email').touched &&
+                  signupform.get('email').invalid
+                "
+              >
+                {{ errormessages.invalid_email }}</mat-error
+              > -->
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Password</mat-label>
+              <input
+                type="password"
+                matInput
+                placeholder="Type in passoword "
+                formControlName="password"
+                
+              />
+              <!-- <mat-error
+                *ngIf="
+                  signupform.get('password').touched &&
+                  signupform.get('password').invalid &&
+                "
+              >
+                {{ errormessages.weak_password }}</mat-error
+              > -->
+              
+            </mat-form-field>
+          </div>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Phone Number</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Type in phone number "
+                formControlName="phone"
+              />
+              <!-- <mat-error
+                *ngIf="
+                  signupform.get('firstname').touched &&
+                  signupform.get('firstname').invalid
+                "
+              >
+                {{ errormessages.firstname }}</mat-error
+              > -->
             </mat-form-field>
           </div>
           <div>
@@ -129,8 +144,9 @@
         <div>
             <div><button type="submit" (click)="onSubmit()" mat-raised-button color="primary" class="w-180 mt-30" >Sign Up</button></div>
         </div>
-        <div> <a href="home">Already Have a Account?</a></div>
+        <div> <a href="authentication/sign-in">Already Have a Account?</a></div>
       </div>
     </mat-card>
+  </div>
   </div>
 </form>
