--- a/src/app/product/components/add-product/add-product.component.html
+++ b/src/app/product/components/add-product/add-product.component.html
@@ -1,8 +1,18 @@
-<form [formGroup]="addProductForm">
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px" class="mt-100">
-    <mat-card class="p-100" [class.mat-elevation-z10]="true">
-      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px" class="p-50px">
-        <div class="dropzone" dropZone (hovered)="toggleHover($event)" (dropped)="startUpload($event)"
+<form [formGroup]="addProductForm" id="file-upload-form" class="uploader">
+  <div
+    fxLayout="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap="30px"
+    class="mt-100"
+  >
+    <mat-card [class.mat-elevation-z10]="true">
+      <div
+        fxLayout="column"
+        fxLayoutAlign="center center"
+        fxLayoutGap="30px"
+        class="px-150"
+      >
+        <!-- <div class="dropzone" dropZone (hovered)="toggleHover($event)" (dropped)="startUpload($event)"
           [class.hovering]="isHovering" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="50px">
           <h3>Paikari.com</h3>
           <p>Drag and drop or select Product Image</p>
@@ -10,106 +20,209 @@
             <label class="file-label">
               <input class="file-input" type="file" (change)="startUpload($event.target.files)" />
 
-              <!-- <span class="file-cta">
+              <span class="file-cta">
               <span class="file-icon">
-                <i class="fa fa-upload"></i>
+                <i class="fa fa-upload" ></i>
               </span>
               <span class="file-label">
-                or choose a file…
+                Choose a Image of the product…
               </span>
-            </span> -->
+            </span>
             </label>
           </div>
+        </div> -->
+
+        <div
+          class="dropzone"
+          dropZone
+          (hovered)="toggleHover($event)"
+          (dropped)="startUpload($event)"
+          [class.hovering]="isHovering"
+          fxLayout="column"
+          fxLayoutAlign="center center"
+          fxLayoutGap="10px"
+          style="width: 100%;"
+          class="pt-20"
+        >
+          <input
+            id="file-upload"
+            type="file"
+            name="fileUpload"
+            accept="image/*"
+            (change)="startUpload($event.target.files)"
+          />
+
+          <label for="file-upload" id="file-drag">
+            <img id="file-image" src="#" alt="Preview" class="hidden" />
+            <div id="start">
+              <i class="fa fa-download" aria-hidden="true"></i>
+              <div>Select a file or drag here</div>
+              <div id="notimage" class="hidden">Please select an image</div>
+              <span id="file-upload-btn" class="btn btn-primary"
+                >Select a file</span
+              >
+            </div>
+            <div id="response" class="hidden">
+              <div id="messages"></div>
+              <div *ngIf="percentage | async as pct">
+                <progress
+                  class="progress is-info"
+                  [value]="pct"
+                  max="100"
+                  id="file-progress"
+                >
+                  <span>{{ pct }}</span
+                  >%
+                </progress>
+              </div>
+            </div>
+          </label>
         </div>
 
-        <div *ngIf="percentage | async as pct">
+        <!-- <div *ngIf="percentage | async as pct">
           <progress class="progress is-info" [value]="pct" max="100"> </progress>
 
           {{ pct | number }}%
-        </div>
+        </div> -->
 
-
-
-
-        <div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+        <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Product Name</mat-label>
-              <input type="text" matInput placeholder="Type in product name " formControlName="productname">
+              <input
+                type="text"
+                matInput
+                placeholder="Type in product name "
+                formControlName="productname"
+              />
               <!-- <mat-error
-                *ngIf="
-                  signupform.get('lastname').touched &&
-                  signupform.get('lastname').invalid
-                "
-              >
-                {{ errormessages.lastname }}</mat-error
-              > -->
+                  *ngIf="
+                    signupform.get('productname').touched &&
+                    signupform.get('productname').invalid
+                  "
+                >
+                  {{ errormessages.productname }}</mat-error
+                > -->
             </mat-form-field>
           </div>
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Product price</mat-label>
-              <input type="number" matInput placeholder="Type in product price " formControlName="productprice">
+              <input
+                type="number"
+                matInput
+                placeholder="Type in product price "
+                formControlName="productprice"
+              />
               <!-- <mat-error
-                *ngIf="
-                  signupform.get('lastname').touched &&
-                  signupform.get('lastname').invalid
-                "
-              >
-                {{ errormessages.lastname }}</mat-error
-              > -->
+                  *ngIf="
+                    signupform.get('lastname').touched &&
+                    signupform.get('lastname').invalid
+                  "
+                >
+                  {{ errormessages.lastname }}</mat-error
+                > -->
             </mat-form-field>
           </div>
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Product quanity</mat-label>
-              <input type="number" matInput placeholder="Type in product unit" formControlName="productquantity">
+              <input
+                type="number"
+                matInput
+                placeholder="Type in product unit"
+                formControlName="productquantity"
+              />
               <!-- <mat-error
-                *ngIf="
-                  signupform.get('lastname').touched &&
-                  signupform.get('lastname').invalid
-                "
-              >
-                {{ errormessages.lastname }}</mat-error
-              > -->
+                  *ngIf="
+                    signupform.get('lastname').touched &&
+                    signupform.get('lastname').invalid
+                  "
+                >
+                  {{ errormessages.lastname }}</mat-error
+                > -->
             </mat-form-field>
           </div>
           <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Product Description</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Type in product Description"
+                formControlName="productDescription"
+              />
+              <!-- <mat-error
+                  *ngIf="
+                    signupform.get('lastname').touched &&
+                    signupform.get('lastname').invalid
+                  "
+                >
+                  {{ errormessages.lastname }}</mat-error
+                > -->
+            </mat-form-field>
+          </div>
+
+          <div>
             <div>
-
-              <button type="submit" (click)="onSubmit()" mat-raised-button color="primary">Create Product</button>
-
+              <button
+                type="submit"
+                (click)="onSubmit()"
+                mat-raised-button
+                color="primary"
+              >
+                Create Product
+              </button>
             </div>
           </div>
         </div>
       </div>
-
-
     </mat-card>
 
     <div>
-      <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px" class="mt-100">
+      <div
+        fxLayout="row"
+        fxLayoutAlign="center center"
+        fxLayoutGap="30px"
+        class="mt-100"
+      >
         <mat-card class="p-200" [class.mat-elevation-z4]="true">
+          
+
           <div *ngIf="snapshot | async as snap">
-            {{ snap.bytesTransferred | fileSize }} of
-            {{ snap.totalBytes | fileSize }}
+            <!-- {{ snap.bytesTransferred | fileSize }} of
+            {{ snap.totalBytes | fileSize }} -->
 
             <div *ngIf="downloadURL | async as url">
-              <h3>Results!</h3>
-              <img [src]="url" /><br />
-              <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+              <!-- <h3>Results!</h3> -->
+              <img width="200" height="200" [src]="url" /><br />
+              <!-- <a [href]="url" target="_blank" rel="noopener">Download Me!</a> -->
             </div>
             <hr />
-
-            <button (click)="task.pause()" class="button is-warning" [disabled]="!isActive(snap)">
+            <div>
+              <p> Value: {{addProductForm.value | json}}</p>
+            </div>
+            <!-- <button
+              (click)="task.pause()"
+              class="button is-warning"
+              [disabled]="!isActive(snap)"
+            >
               Pause
             </button>
-            <button (click)="task.cancel()" class="button is-danger" [disabled]="!isActive(snap)">
+            <button
+              (click)="task.cancel()"
+              class="button is-danger"
+              [disabled]="!isActive(snap)"
+            >
               Cancel
             </button>
-            <button (click)="task.Resume()" class="button is-info" [disabled]="!(snap?.state === 'paused')">
+            <button
+              (click)="task.Resume()"
+              class="button is-info"
+              [disabled]="!(snap?.state === 'paused')"
+            >
               Resume
-            </button>
+            </button> -->
           </div>
         </mat-card>
       </div>
