--- a/src/app/product/components/add-product/add-product.component.html
+++ b/src/app/product/components/add-product/add-product.component.html
@@ -34,14 +34,14 @@
 
         <div
           class="dropzone"
-          dropZone
+          DropZone
           (hovered)="toggleHover($event)"
           (dropped)="startUpload($event)"
           [class.hovering]="isHovering"
           fxLayout="column"
           fxLayoutAlign="center center"
           fxLayoutGap="10px"
-          style="width: 100%;"
+          style="width: 150%;"
           class="pt-20"
         >
           <input
@@ -51,9 +51,6 @@
             accept="image/*"
             (change)="startUpload($event.target.files)"
           />
-
-          <!-- <input class="file-input" type="file" (change)="startUpload($event.target.files)" /> -->
-
           <label for="file-upload" id="file-drag">
             <img id="file-image" src="#" alt="Preview" class="hidden" />
             <div id="start">
@@ -81,11 +78,11 @@
           </label>
         </div>
 
-        <!-- <div *ngIf="percentage | async as pct">
+        <div *ngIf="percentage | async as pct">
           <progress class="progress is-info" [value]="pct" max="100"> </progress>
 
           {{ pct | number }}%
-        </div> -->
+        </div>
 
         <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <div>
