menu icon added

--- a/src/styles/core-style.scss
+++ b/src/styles/core-style.scss
@@ -386,3 +386,7 @@ $x1: 0;
 	background: $primary-color !important;
 	color: $white-color !important;
 }
+
+.mat-icon-size {
+	font-size: 40px;
+  }
