--- a/src/app/home/components/customer-home/customer-home.component.html
+++ b/src/app/home/components/customer-home/customer-home.component.html
@@ -1,1 +1,24 @@
-<p>customer-home works!</p>
+<div class="mt-40" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30">>
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Jewel Rana</mat-card-title>
+          <mat-card-subtitle>Paikari.com</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://i.ibb.co/qkQ0rrg/feet-footwear-jump-nike-shoes-sneakers-1043835.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <h1>White Stylish Shoe</h1>
+          <h3>BDT 1000 /Piece</h3>
+          <p>this a samle shoe product</p>
+        </mat-card-content>
+        <div fxLayoutAlign="end end">
+            <mat-card-actions>
+                <button class="cursor-pointer" color="primary" mat-fab aria-label="Example icon-button with a heart icon" >
+                    <mat-icon>add_shopping_cart</mat-icon>
+                  </button>
+            </mat-card-actions>
+        </div>
+        
+      </mat-card>
+</div>
+  
