--- a/src/app/product/components/add-product/add-product.component.html
+++ b/src/app/product/components/add-product/add-product.component.html
@@ -104,7 +104,7 @@
                 > -->
             </mat-form-field>
           </div>
-          <div>
+          <!-- <div>
             <mat-form-field appearance="outline">
               <mat-label>Categories</mat-label>
               <mat-select
@@ -119,7 +119,7 @@
               </mat-select>
               
             </mat-form-field>
-          </div>
+          </div> -->
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Product price</mat-label>
