--- a/src/app/product/components/add-product/add-product.component.scss
+++ b/src/app/product/components/add-product/add-product.component.scss
@@ -187,3 +187,15 @@ h2 {
     cursor: pointer;
   }
 }
+
+
+.example-tree-invisible {
+  display: none;
+}
+
+.example-tree ul,
+.example-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
