--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -27,3 +27,18 @@
       font-size: 20px !important;
   }
   
+  a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a.anchor-text {
+
+}
+
+a.anchor-text:hover {
+    text-decoration: none;
+}
