--- a/src/app/product/components/single-product-view/single-product-view.component.html
+++ b/src/app/product/components/single-product-view/single-product-view.component.html
@@ -1,1 +1,41 @@
-<p>single-product-view works!</p>
+<div
+fxLayout="row"
+fxLayoutAlign="center center"
+fxLayoutGap="10px"
+class="mt-100"
+
+>
+<div >
+  <mat-card class="example-card" [class.mat-elevation-z8]="true">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Jewel Rana</mat-card-title>
+      <mat-card-subtitle>Paikari.com</mat-card-subtitle>
+    </mat-card-header>
+    <div *ngIf="productData">
+          <img [src]="productData.productImageUrl" />
+    </div>
+
+    <mat-card-content *ngIf="productData">
+      <h1>{{ productData.productname }}</h1>
+      <h3>BDT {{ productData.productprice }} /Unit</h3>
+      <h4>
+        Minimum Order- {{ productData.productquantity }}
+      </h4>
+      <p>{{ productData.productDescription }}</p>
+    </mat-card-content>
+    <div fxLayoutAlign="end end">
+      <mat-card-actions>
+        <button
+          class="cursor-pointer"
+          color="primary"
+          mat-fab
+          aria-label="Example icon-button with a heart icon"
+        >
+          <mat-icon>add_shopping_cart</mat-icon>
+        </button>
+      </mat-card-actions>
+    </div>
+  </mat-card>
+</div>
+</div>
